# hinglish-bank-agent

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: build_dataset.py
src/hba/: schemas.py
src/hba/augment/: noise.py
src/hba/filter/: dedup.py  judge.py  pipeline.py  programmatic.py
src/hba/generate/: generator.py  personas.py
