[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hba"
version = "0.1.0"
description = "Data pipeline for a privacy-first Hinglish banking LLM"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "datasketch>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyflakes>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hba"]